[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adbcap"
version = "1.0.0"
description = "ADB Capture — Screenshot and screen recording tool for ADB-connected Android devices"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["rich"]
authors = [{ name = "Kevin Pauly" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]

[project.scripts]
adbcap = "adbcap.cli:main"

[project.urls]
Repository = "https://github.com/kpauly2/adbcap"
